# aligntools

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml  main.yml
src/aligntools/: __init__.py  cigar.py  cigar_actions.py  cigar_hit.py  comparable.py  coordinate_mapping.py  exceptions.py  int_dict.py  lib.py  libexceptions.py
tests/: test_main.py
