[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aligntools"
version = "1.2.1"
description = "A Python library for manipulation of CIGAR, MSA, and other alignment formats."
readme = "README.md"
license = "AGPL-3.0"
authors = [
    { name = "British Columbia Centre for Excellence in HIV/AIDS", email = "vmysak@bccfe.ca" },
]
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    # Dependencies required for running the test suite
    "pytest>=6.0",
    "pytest-cov",
]
dev = [
    # Dependencies required for development (linting, type checking, etc.)
    "ruff",
    "mypy==1.9.0",
    "bandit",
]

[project.urls]
"Homepage" = "https://github.com/cfe-lab/aligntools"

[tool.hatch.build.targets.sdist]
include = [ "src/aligntools" ]

[tool.pytest.ini_options]
pythonpath = "src"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "overnight: for tests that take hours to complete (deselect with '-m \"not overnight\"')",
  "serial"
]

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true
strict_optional = true
allow_untyped_calls = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
strict = true
